--- a/frontend/src/Pages/CheckoutPage.css
+++ b/frontend/src/Pages/CheckoutPage.css
@@ -1,69 +1,46 @@
-/* Styles for desktop and larger screens */
 .checkout-container {
-    width: 40%;
-    margin: 100px auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #f9f9f9;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .checkout-form {
-    width: 100%;
-  }
-  
-  .check-lab {
-    margin-top: 15px;
-    font-weight: bold;
-  }
-  
-  .check-lab,
-  select {
-    width: calc(100% - 20px);
-    margin-bottom: 15px;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-  }
-  
-  .place-order-button {
-    width: 100%;
-    margin-top: 20px;
-    padding: 12px 0;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .place-order-button:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Responsive styles for mobile devices */
-  @media screen and (max-width: 768px) {
-    .checkout-container {
-      width: 80%;
-      padding: 20px;
-    }
-  
-    label {
-      font-size: 16px;
-    }
-  
-    input,
-    select {
-      padding: 10px;
-    }
-  
-    button {
-      padding: 10px 0;
-    }
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
+  margin-bottom: 20px;
+  margin-left: 25%;
+  width: 50%;
+  box-shadow: 0 2px 4px rgba(0.5, 0.5, 0.5, 0.5);
+}
+
+.checkout-title {
+  margin-top: 30px;
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+
+.checkout-input {
+  display: inline-block;
+  height: 40px;
+  margin-bottom: 0px;
+  padding-left: 20px;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  width: 300px; /* Reduced width */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Added box shadow */
+}
+
+.checkout-button {
+  height: 50px;
+  width: 400px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 25px;
+  background-color: #542c2c;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  margin-bottom: 50px;
+}
+
+.checkout-button:hover {
+  background-color: #74545c;
+}
