Revert changes to README file

--- a/frontend/src/Components/Navigation/Navbar.css
+++ b/frontend/src/Components/Navigation/Navbar.css
@@ -158,7 +158,7 @@ img {
   }
 
   .nav-list a:hover {
-    color: #684444; /* Change color on hover */
+    color: black; /* Change color on hover */
   }
 
   .dropdownmenu {
